--- a/vue-basics/package.json
+++ b/vue-basics/package.json
@@ -7,8 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue": "^3.2.38"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
